--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <groupId>fr.esgi</groupId>
     <artifactId>users-group-service</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <java.version>11</java.version>
