Fix kafka producers errors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,17 +15,17 @@ spring:
   cloud:
     stream:
       function:
-        definition: createdUserConsumer;createdGroupProducer
+        definition: createdUserConsumer
       kafka:
         binder:
           brokers: ${KAFKA_URL}
           replicationFactor: 1
       bindings:
-        createdUserConsumer-in-0:
-          destination: "user-created"
-          content-type: application/json
         createdGroupProducer-out-0:
           destination: "group-created"
+          content-type: application/json
+        createdUserConsumer-in-0:
+          destination: "user-created"
           content-type: application/json
   servlet:
     multipart:
