--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ eureka:
 
 spring:
   application:
-    name: user-group-service
+    name: users-group-service
   cloud:
     stream:
       function:
